syntax = "proto3";
import "google/protobuf/any.proto";
package user;

service UserController {
  rpc createUser (UserData) returns (UserData);
  rpc getUser (UserId) returns (UserData);
}

message UserData {
   string name = 1;
   string surname = 2;
   string secondname = 3;
   string email = 4;
   string password = 5;
   string phone = 6;
   string dob = 7;
}

message UserId {
  string id = 1;
}
